chore: cleanup files

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -19,7 +19,6 @@
   "City of birth": "City of birth",
   "Clear all": "Clear all",
   "Confirm": "Confirm",
-  "Confirm identity": "Confirm identity",
   "Contacts": "Contacts",
   "Contingent": "Contingent",
   "Continue": "Continue",
@@ -34,7 +33,6 @@
   "E-bills": "E-bills",
   "Edit": "Edit",
   "Email address": "Email address",
-  "Encrypted data": "Encrypted data",
   "Endorse": "Endorse",
   "Endorse to the order of": "Endorse to the order of",
   "Enter app": "Enter app",
@@ -50,7 +48,6 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Issue bills in your own name": "Issue bills in your own name",
-  "Legal full name": "Legal full name",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
@@ -65,14 +62,12 @@
   "No notifications": "No notifications",
   "No protest": "No protest",
   "Notifications": "Notifications",
-  "Open email inbox": "Open email inbox",
   "Optional information": "Optional information",
   "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
   "Paste from clipboard": "Paste from clipboard",
   "Pay": "Pay",
   "Payee": "Payee",
   "Payer": "Payer",
-  "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "Personal identity": "Personal identity",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
@@ -87,7 +82,6 @@
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Request to accept": "Request to accept",
   "Required information": "Required information",
-  "Resend ({delay})": "Resend ({delay})",
   "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
   "Save": "Save",
@@ -106,21 +100,17 @@
   "Settings": "Settings",
   "Sign": "Sign",
   "Sign bills on behalf of a company": "Sign bills on behalf of a company",
-  "Sign to confirm": "Sign to confirm",
   "Skip for now": "Skip for now",
   "Social security number": "Social security number",
   "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
   "Successfully created your identity": "Successfully created your identity",
   "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
-  "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
   "To the order of": "To the order of",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
-  "Verify your email address": "Verify your email address",
   "View more": "View more",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
-  "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
@@ -130,31 +120,10 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
-  "pages.identityCreation.createNewIdentity.newIdentity": "Create new identity",
   "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "pages.identityCreation.createNewIdentity.title": "Encrypted data",
-  "pages.onboarding.confirmIdentity.agreeToTerms": "I agree to the Terms and conditions",
-  "pages.onboarding.confirmIdentity.birthDate": "Birth date",
-  "pages.onboarding.confirmIdentity.cityOfBirth": "City of birth",
-  "pages.onboarding.confirmIdentity.countryOfBirth": "Country of birth",
-  "pages.onboarding.confirmIdentity.emailAddress": "Email address",
-  "pages.onboarding.confirmIdentity.identityDocument": "Identity document",
-  "pages.onboarding.confirmIdentity.legalFullName": "Legal full name",
-  "pages.onboarding.confirmIdentity.optionalInformation": "Optional information",
-  "pages.onboarding.confirmIdentity.postalAddress": "Postal address",
-  "pages.onboarding.confirmIdentity.requiredInformation": "Required information",
-  "pages.onboarding.confirmIdentity.signToConfirm": "Sign",
-  "pages.onboarding.confirmIdentity.socialSecurityNumber": "Social security number",
-  "pages.onboarding.confirmIdentity.subtitle": "Please check if all the details are correct before proceeding",
-  "pages.onboarding.confirmIdentity.title": "Preview identity",
   "pages.onboarding.emailVerification.continue": "Continue",
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
-  "pages.onboarding.emailVerification.title": "Verify your email address",
-  "pages.onboarding.optionalInformation.continue": "Skip for now",
-  "pages.onboarding.optionalInformation.subtitle": "This information will give you better credibility with your counter parties",
-  "pages.onboarding.optionalInformation.title": "Optional information",
-  "pages.onboarding.requiredInformation.continue": "Continue",
-  "pages.onboarding.requiredInformation.subtitle": "Please fill in your personal details, all details are handled confidentially",
-  "pages.onboarding.requiredInformation.title": "Required information"
+  "pages.onboarding.emailVerification.title": "Verify your email address"
 }
