chore: create company creation initial files

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -17,12 +17,14 @@
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
   "City of birth": "City of birth",
+  "City of registration": "City of registration",
   "Clear all": "Clear all",
   "Confirm": "Confirm",
   "Contacts": "Contacts",
   "Contingent": "Contingent",
   "Continue": "Continue",
   "Country of birth": "Country of birth",
+  "Create company": "Create company",
   "Create contact": "Create contact",
   "Create new identity": "Create new identity",
   "Create your first contact to start a relation": "Create your first contact to start a relation",
@@ -48,6 +50,8 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Issue bills in your own name": "Issue bills in your own name",
+  "Legal company name": "Legal company name",
+  "Make it easier to create bills with colleagues from your company": "Make it easier to create bills with colleagues from your company",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
@@ -80,6 +84,7 @@
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
+  "Registration number": "Registration number",
   "Request to accept": "Request to accept",
   "Required information": "Required information",
   "Restore identity": "Restore identity",
@@ -109,6 +114,7 @@
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
+  "Upload proof of registration": "Upload proof of registration",
   "View more": "View more",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "displayRange.days": "{value} Days",
