chore: create preview information screen

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -80,6 +80,7 @@
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
+  "Preview company": "Preview company",
   "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
