fix: conditional label renders

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -2,6 +2,8 @@
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
   "A strong trade credit solution. Directly between businesses": "A strong trade credit solution. Directly between businesses",
   "Accept": "Accept",
+  "Add logo": "Add logo",
+  "Add photo": "Add photo",
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
@@ -14,6 +16,7 @@
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
   "City of birth": "City of birth",
+  "City of registration": "City of registration",
   "Clear all": "Clear all",
   "Company": "Company",
   "Confirm": "Confirm",
@@ -52,6 +55,7 @@
   "Issue a bill": "Issue a bill",
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
+  "Legal company name": "Legal company name",
   "Legal full name": "Legal full name",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
@@ -86,6 +90,7 @@
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
+  "Registration number": "Registration number",
   "Request to accept": "Request to accept",
   "Required information": "Required information",
   "Resend ({delay})": "Resend ({delay})",
