chore(Contacts): i18n search placeholder

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -62,6 +62,7 @@
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
+  "Name, address, email": "Name, address, email...",
   "Net amount": "Net amount",
   "New Contact": "New contact",
   "New bill": "New bill",
