chore(Contacts): add no results page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -119,6 +119,7 @@
   "Successfully created your identity": "Successfully created your identity",
   "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
   "To the order of": "To the order of",
+  "Try searching another contact": "Try searching another contact",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
