chore: home screen updates

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -10,11 +10,13 @@
   "Are you sure": "Are you sure?",
   "Balances": "Balances",
   "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
+  "Bill list": "Bill list",
   "Bills": "Bills",
   "Birth date": "Birth date",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
+  "Cashflow": "Cashflow",
   "City of birth": "City of birth",
   "City of registration": "City of registration",
   "Clear all": "Clear all",
@@ -101,7 +103,6 @@
   "Search": "Search",
   "Search for bills": "Search for bills...",
   "See all": "See all",
-  "See all bills": "See all bills",
   "See history": "See history",
   "Select date": "Select dates",
   "Select date range": "Select date range",
