chore: rename search placeholder id for home screen

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -101,6 +101,7 @@
   "Restore with seed phrase": "Restore with seed phrase",
   "Save": "Save",
   "Search": "Search",
+  "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
   "See all": "See all",
   "See history": "See history",
