chore(Contacts): trigger search on type filter change

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -71,6 +71,7 @@
   "No bills issued yet": "No bills issued yet",
   "No notifications": "No notifications",
   "No protest": "No protest",
+  "No results": "No results",
   "Node ID": "Node ID",
   "Notifications": "Notifications",
   "Open email inbox": "Open email inbox",
