--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -24,6 +24,7 @@
   "Contingent": "Contingent",
   "Continue": "Continue",
   "Country of birth": "Country of birth",
+  "Country of registration": "Country of registration",
   "Create company": "Create company",
   "Create contact": "Create contact",
   "Create new identity": "Create new identity",
@@ -85,6 +86,8 @@
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
+  "Registration date": "Registration date",
+  "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
   "Request to accept": "Request to accept",
   "Required information": "Required information",
