--- a/src/i18n/tr-TR/translation.json
+++ b/src/i18n/tr-TR/translation.json
@@ -64,6 +64,7 @@
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
+  "Name, address, email": "Name, address, email...",
   "Net amount": "Net amount",
   "New Contact": "New contact",
   "New bill": "New bill",
@@ -72,6 +73,7 @@
   "No bills issued yet": "No bills issued yet",
   "No notifications": "No notifications",
   "No protest": "No protest",
+  "No results": "No results",
   "Node ID": "Node ID",
   "Notifications": "Notifications",
   "Open email inbox": "Open email inbox",
@@ -120,6 +122,7 @@
   "Successfully created your identity": "Successfully created your identity",
   "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
   "To the order of": "To the order of",
+  "Try searching another contact": "Try searching another contact",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
