chore: create reusable bill card

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -130,6 +130,11 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
   "You can always re-add a contact later": "You can always re-add a contact later",
+  "bill.card.drawee": "Drawee",
+  "bill.card.drawer": "Drawer",
+  "bill.card.payOn": "Pay on",
+  "bill.card.payer": "Payer",
+  "bill.card.placeOfPayment": "Place of payment",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
