--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -7,12 +7,17 @@
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
+  "Authorised signer": "Authorised signer",
+  "Balances": "Balances",
+  "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
+  "Bill issuer": "Bill issuer",
   "Are you sure": "Are you sure?",
   "Balances": "Balances",
   "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
   "Bill list": "Bill list",
   "Bills": "Bills",
   "Birth date": "Birth date",
+  "Birth date (MM/DD/YYYY)": "Birth date (MM/DD/YYYY)",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
@@ -42,21 +47,24 @@
   "Discount": "Discount",
   "Discount rate": "Discount rate",
   "E-bills": "E-bills",
+  "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Email address": "Email address",
-  "Encrypted data": "Encrypted data",
   "Endorse": "Endorse",
   "Endorse to the order of": "Endorse to the order of",
   "Enter app": "Enter app",
   "Filter": "Filter",
   "Forgot your PIN?": "Forgot your PIN?",
+  "Full name": "Full name",
   "Gross amount": "Gross amount",
   "Home": "Home",
+  "I agree to the Terms and conditions": "I agree to the Terms and conditions",
   "Identity document": "Identity document",
   "Invoice": "Invoice",
   "Issue a bill": "Issue a bill",
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
+  "Issue bills in your own name": "Issue bills in your own name",
   "Legal company name": "Legal company name",
   "Legal full name": "Legal full name",
   "Locale": "Locale",
@@ -76,12 +84,13 @@
   "No results": "No results",
   "Node ID": "Node ID",
   "Notifications": "Notifications",
-  "Open email inbox": "Open email inbox",
   "Optional information": "Optional information",
+  "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
   "Paste from clipboard": "Paste from clipboard",
   "Pay": "Pay",
   "Payee": "Payee",
   "Payer": "Payer",
+  "Personal identity": "Personal identity",
   "Person": "Person",
   "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
@@ -91,6 +100,7 @@
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
+  "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
@@ -98,7 +108,6 @@
   "Registration number": "Registration number",
   "Request to accept": "Request to accept",
   "Required information": "Required information",
-  "Resend ({delay})": "Resend ({delay})",
   "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
   "Save": "Save",
@@ -115,17 +124,19 @@
   "Sell a bill": "Sell a bill",
   "Settings": "Settings",
   "Sign": "Sign",
-  "Sign to confirm": "Sign to confirm",
+  "Sign bills on behalf of a company": "Sign bills on behalf of a company",
   "Skip for now": "Skip for now",
   "Social security number": "Social security number",
   "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
   "Successfully created your identity": "Successfully created your identity",
-  "This information will give you better credibility with your counter parties": "This information will give you better credibility with your counter parties",
+  "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "To the order of": "To the order of",
   "Try searching another contact": "Try searching another contact",
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
+  "View more": "View more",
+  "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "Verify your email address": "Verify your email address",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
@@ -140,5 +151,11 @@
   "dropdown.option.30days": "30 Days",
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
-  "dropdown.option.90days": "90 Days"
+  "dropdown.option.90days": "90 Days",
+  "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
+  "pages.identityCreation.createNewIdentity.title": "Encrypted data",
+  "pages.onboarding.emailVerification.continue": "Continue",
+  "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
+  "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
+  "pages.onboarding.emailVerification.title": "Verify your email address"
 }
