--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -45,7 +45,6 @@
   "Edit contact": "Edit contact",
   "Email address": "Email address",
   "Encrypted data": "Encrypted data",
-  "Endorse": "Endorse",
   "Endorse to the order of": "Endorse to the order of",
   "Enter app": "Enter app",
   "Filter": "Filter",
@@ -96,7 +95,6 @@
   "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
-  "Request to accept": "Request to accept",
   "Required information": "Required information",
   "Resend ({delay})": "Resend ({delay})",
   "Restore identity": "Restore identity",
@@ -130,11 +128,15 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
   "You can always re-add a contact later": "You can always re-add a contact later",
+  "bill.card.accepted": "Accepted",
   "bill.card.drawee": "Drawee",
   "bill.card.drawer": "Drawer",
+  "bill.card.endorsements": "Endorsements",
+  "bill.card.noProtest": "No protest. Value received.",
   "bill.card.payOn": "Pay on",
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
+  "bill.card.status": "Status:",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
