chore: create endorsement component

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -128,6 +128,8 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
   "You can always re-add a contact later": "You can always re-add a contact later",
+  "bill.actions.actionsList": "Endorse",
+  "bill.actions.requestToAccept": "Request to accept",
   "bill.card.accepted": "Accepted",
   "bill.card.drawee": "Drawee",
   "bill.card.drawer": "Drawer",
@@ -147,5 +149,7 @@
   "dropdown.option.30days": "30 Days",
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
-  "dropdown.option.90days": "90 Days"
+  "dropdown.option.90days": "90 Days",
+  "endorsement.payee": "Pay to the order of",
+  "endorsement.signer": "Signed"
 }
