chore: make endorsements page overlay screen

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -129,7 +129,10 @@
   "We've sent a one-time passcode to {email}": "We've sent a one-time passcode to {email}",
   "You can always re-add a contact later": "You can always re-add a contact later",
   "bill.actions.actionsList": "Endorse",
+  "bill.actions.endorse": "Endorse",
+  "bill.actions.mint": "Mint",
   "bill.actions.requestToAccept": "Request to accept",
+  "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
   "bill.card.drawee": "Drawee",
   "bill.card.drawer": "Drawer",
