chore: create endorse bill page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -153,6 +153,11 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "endorse.endorsee": "Endorsee",
+  "endorse.orderOf": "to the order of",
+  "endorse.sign": "Sign",
+  "endorse.termsAndConditions": "I agree to the Terms and conditions",
+  "endorse.title": "Endorse bill",
   "endorsement.payee": "Pay to the order of",
   "endorsement.signer": "Signed",
   "endorsements.sort": "Newest",
