--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -153,6 +153,8 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "endorse.cancel": "Cancel",
+  "endorse.confirm": "Confirm",
   "endorse.endorsee": "Endorsee",
   "endorse.orderOf": "to the order of",
   "endorse.sign": "Sign",
