--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -143,6 +143,15 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can always re-add a contact later": "You can always re-add a contact later",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.draw.date": "Date",
+  "bill.draw.edit": "Edit",
+  "bill.draw.noProtest": "No protest. Value received.",
+  "bill.draw.payOn": "pay on",
+  "bill.draw.payee": "Payee",
+  "bill.draw.payer": "Payer",
+  "bill.draw.placeOfPayment": "Place of payment",
+  "bill.draw.sum": "the sum of",
+  "bill.draw.toTheOrderOf": "to the sum of",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
