draw bill flow (#217)
* draw bill wip

* chore: make requested changes

---------

Co-authored-by: Michael Keaton <michaeljkeaton@protonmail.com>

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -21,6 +21,8 @@
   "Cancel": "Cancel",
   "Cashflow": "Cashflow",
   "City of birth": "City of birth",
+  "City of issuing": "City of issuing",
+  "City of payment": "City of payment",
   "City of registration": "City of registration",
   "Clear all": "Clear all",
   "Company": "Company",
@@ -43,9 +45,11 @@
   "Delete contact": "Delete",
   "Discount": "Discount",
   "Discount rate": "Discount rate",
+  "Draw bill": "Draw bill",
   "E-bills": "E-bills",
   "Edit": "Edit",
   "Edit contact": "Edit contact",
+  "Edit issue": "Edit issue",
   "Email address": "Email address",
   "Endorse": "Endorse",
   "Endorse to the order of": "Endorse to the order of",
@@ -53,6 +57,7 @@
   "Filter": "Filter",
   "Forgot your PIN?": "Forgot your PIN?",
   "Full name": "Full name",
+  "Go to overview": "Go to overview",
   "Gross amount": "Gross amount",
   "Home": "Home",
   "I agree to the Terms and conditions": "I agree to the Terms and conditions",
@@ -62,6 +67,7 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Issue bills in your own name": "Issue bills in your own name",
+  "Issue date": "Issue date",
   "Legal company name": "Legal company name",
   "Legal full name": "Legal full name",
   "Locale": "Locale",
@@ -89,6 +95,7 @@
   "Payer": "Payer",
   "Person": "Person",
   "Personal identity": "Personal identity",
+  "Place of payment": "Place of payment",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
@@ -96,6 +103,7 @@
   "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
+  "Preview bill": "Preview bill",
   "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
@@ -124,6 +132,7 @@
   "Skip for now": "Skip for now",
   "Social security number": "Social security number",
   "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
+  "Success": "Success",
   "Successfully created your identity": "Successfully created your identity",
   "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "To the order of": "To the order of",
@@ -133,6 +142,16 @@
   "Upload document": "Upload document",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can always re-add a contact later": "You can always re-add a contact later",
+  "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.draw.date": "Date",
+  "bill.draw.edit": "Edit",
+  "bill.draw.noProtest": "No protest. Value received.",
+  "bill.draw.payOn": "pay on",
+  "bill.draw.payee": "Payee",
+  "bill.draw.payer": "Payer",
+  "bill.draw.placeOfPayment": "Place of payment",
+  "bill.draw.sum": "the sum of",
+  "bill.draw.toTheOrderOf": "to the sum of",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
@@ -144,8 +163,13 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "pages.bill.preview.heading": "Against this bill of exchange",
+  "pages.bill.preview.invoice": "Invoice",
+  "pages.bill.preview.noProtest": "No protest. Value received.",
   "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "pages.identityCreation.createNewIdentity.title": "Encrypted data",
+  "pages.mintBill.billInformation.calculateDiscount": "Calculate discount",
+  "pages.onboarding.confirmIdentity.agreeToTerms": "I agree to the Terms and conditions",
   "pages.onboarding.emailVerification.continue": "Continue",
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
