--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -142,9 +142,12 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.mint.cancel": "Cancel mint request",
   "bill.mint.request.action": "Request mint quote",
   "bill.mint.request.selectMint": "Select a mint",
   "bill.mint.request.title": "Request to mint",
+  "bill.mint.selectQuote": "Select a quote",
+  "bill.mint.title": "Mint quotes",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
