--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -143,6 +143,11 @@
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
   "bill.mint.cancel": "Cancel mint request",
+  "bill.mint.preview.forTheSumOf": "for the sum of",
+  "bill.mint.preview.mintedEcash": "Ecash minted",
+  "bill.mint.preview.sign": "Sign",
+  "bill.mint.preview.title": "Preview mint",
+  "bill.mint.preview.toTheOrderOf": "to the order of",
   "bill.mint.quote.status.declined": "Declined",
   "bill.mint.quote.status.pending": "Waiting for quote",
   "bill.mint.request.action": "Request mint quote",
