chore: add payment received page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -146,10 +146,15 @@
   "bill.mint.preview.forTheSumOf": "for the sum of",
   "bill.mint.preview.mintedEcash": "Ecash minted",
   "bill.mint.preview.sign": "Sign",
+  "bill.mint.preview.sign.subtitle": "The endorsement to the mint is legally binding",
+  "bill.mint.preview.sign.title": "Are you sure?",
   "bill.mint.preview.title": "Preview mint",
   "bill.mint.preview.toTheOrderOf": "to the order of",
   "bill.mint.quote.status.declined": "Declined",
   "bill.mint.quote.status.pending": "Waiting for quote",
+  "bill.mint.received.billMinted": "Bill minted",
+  "bill.mint.received.mintedBy": "By",
+  "bill.mint.received.paymentReceived": "Received",
   "bill.mint.request.action": "Request mint quote",
   "bill.mint.request.selectMint": "Select a mint",
   "bill.mint.request.title": "Request to mint",
