chore (mint user): create mint request review page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -156,8 +156,11 @@
   "bill.mint.received.mintedBy": "By",
   "bill.mint.received.paymentReceived": "Received",
   "bill.mint.request.action": "Request mint quote",
+  "bill.mint.request.quote": "Quote",
+  "bill.mint.request.reject": "Reject",
   "bill.mint.request.selectMint": "Select a mint",
   "bill.mint.request.title": "Request to mint",
+  "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
   "contacts.empty.description": "Create your first contact to start a relation",
