chore: make onboarding adjustments

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,6 +1,5 @@
 {
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
-  "A strong trade credit solution. Directly between businesses": "A strong trade credit solution. Directly between businesses",
   "Accept": "Accept",
   "Add logo": "Add logo",
   "Add photo": "Add photo",
@@ -10,7 +9,6 @@
   "Are you sure": "Are you sure?",
   "Authorised signer": "Authorised signer",
   "Balances": "Balances",
-  "Based on proven Bitcoin tech, free to download and use for everyone.": "Based on proven Bitcoin tech, free to download and use for everyone.",
   "Bill issuer": "Bill issuer",
   "Bill list": "Bill list",
   "Bills": "Bills",
@@ -80,7 +78,6 @@
   "New Contact": "New contact",
   "New bill": "New bill",
   "New identity": "New identity",
-  "No banks involved. Works even in a banking crisis": "No banks involved. Works even in a banking crisis",
   "No bills issued yet": "No bills issued yet",
   "No notifications": "No notifications",
   "No protest": "No protest",
@@ -107,7 +104,6 @@
   "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
-  "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
   "Request to accept": "Request to accept",
@@ -163,6 +159,10 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
+  "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
+  "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
+  "onboarding.screens.third": "Practical, clear, and organised. Your finances at your fingertips.",
   "pages.bill.preview.heading": "Against this bill of exchange",
   "pages.bill.preview.invoice": "Invoice",
   "pages.bill.preview.noProtest": "No protest. Value received.",
