--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -49,7 +49,6 @@
   "Edit contact": "Edit contact",
   "Edit issue": "Edit issue",
   "Email address": "Email address",
-  "Endorse": "Endorse",
   "Endorse to the order of": "Endorse to the order of",
   "Enter app": "Enter app",
   "Filter": "Filter",
@@ -106,7 +105,6 @@
   "Recover with seed phrase": "Recover with seed phrase",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
-  "Request to accept": "Request to accept",
   "Required information": "Required information",
   "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
@@ -139,6 +137,20 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can always re-add a contact later": "You can always re-add a contact later",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.actions.actionsList": "Endorse",
+  "bill.actions.endorse": "Endorse",
+  "bill.actions.mint": "Mint",
+  "bill.actions.requestToAccept": "Request to accept",
+  "bill.actions.sell": "Sell",
+  "bill.card.accepted": "Accepted",
+  "bill.card.drawee": "Drawee",
+  "bill.card.drawer": "Drawer",
+  "bill.card.endorsements": "Endorsements",
+  "bill.card.noProtest": "No protest. Value received.",
+  "bill.card.payOn": "Pay on",
+  "bill.card.payer": "Payer",
+  "bill.card.placeOfPayment": "Place of payment",
+  "bill.card.status": "Status:",
   "bill.draw.date": "Date",
   "bill.draw.edit": "Edit",
   "bill.draw.noProtest": "No protest. Value received.",
@@ -148,6 +160,27 @@
   "bill.draw.placeOfPayment": "Place of payment",
   "bill.draw.sum": "the sum of",
   "bill.draw.toTheOrderOf": "to the sum of",
+  "bill.mint.cancel": "Cancel mint request",
+  "bill.mint.preview.forTheSumOf": "for the sum of",
+  "bill.mint.preview.mintedEcash": "Ecash minted",
+  "bill.mint.preview.sign": "Sign",
+  "bill.mint.preview.sign.subtitle": "The endorsement to the mint is legally binding",
+  "bill.mint.preview.sign.title": "Are you sure?",
+  "bill.mint.preview.title": "Preview mint",
+  "bill.mint.preview.toTheOrderOf": "to the order of",
+  "bill.mint.quote.status.declined": "Declined",
+  "bill.mint.quote.status.pending": "Waiting for quote",
+  "bill.mint.received.billMinted": "Bill minted",
+  "bill.mint.received.mintedBy": "By",
+  "bill.mint.received.paymentReceived": "Received",
+  "bill.mint.request.action": "Request mint quote",
+  "bill.mint.request.quote": "Quote",
+  "bill.mint.request.reject": "Reject",
+  "bill.mint.request.selectMint": "Select a mint",
+  "bill.mint.request.title": "Request to mint",
+  "bill.mint.requestToMint": "Request to mint",
+  "bill.mint.selectQuote": "Select a quote",
+  "bill.mint.title": "Mint quotes",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
@@ -159,6 +192,17 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "endorse.cancel": "Cancel",
+  "endorse.confirm": "Confirm",
+  "endorse.endorsee": "Endorsee",
+  "endorse.orderOf": "to the order of",
+  "endorse.sign": "Sign",
+  "endorse.termsAndConditions": "I agree to the Terms and conditions",
+  "endorse.title": "Endorse bill",
+  "endorsement.payee": "Pay to the order of",
+  "endorsement.signer": "Signed",
+  "endorsements.sort": "Newest",
+  "endorsements.title": "Endorsements ({count})",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
@@ -174,6 +218,10 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
+  "pay.title": "Payment instructions",
+  "payment.info.address": "Address to pay",
+  "payment.info.from": "Payment from",
+  "payment.info.link": "Link to pay",
   "settings.agreements.title": "Agreements",
   "settings.displayCurrency": "Display currency",
   "settings.displayCurrency.title": "Display currency",
