chore: change texts and fix button

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -96,7 +96,6 @@
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
-  "Please paste in your seed phrase to recover your identity": "Please paste in your seed phrase to recover your identity",
   "Postal address": "Postal address",
   "Preview": "Preview",
   "Preview bill": "Preview bill",
@@ -222,6 +221,8 @@
   "payment.info.address": "Address to pay",
   "payment.info.from": "Payment from",
   "payment.info.link": "Link to pay",
+  "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
+  "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
   "settings.displayCurrency": "Display currency",
   "settings.displayCurrency.title": "Display currency",
