--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -202,6 +202,22 @@
   "endorsement.signer": "Signed",
   "endorsements.sort": "Newest",
   "endorsements.title": "Endorsements ({count})",
+  "identity.create.continue": "Continue",
+  "identity.create.createNew": "Create new identity",
+  "identity.create.postalAddress.description": "These fields are only needed if you want to issue bills in your own name",
+  "identity.create.postalAddress.form.city": "City",
+  "identity.create.postalAddress.form.country": "Country",
+  "identity.create.postalAddress.form.street": "Street",
+  "identity.create.postalAddress.form.zip": "Zip code",
+  "identity.create.postalAddress.title": "Optional: postal address",
+  "identity.create.requiredData.form.emailAddress": "Email address",
+  "identity.create.requiredData.form.fullName": "Full name",
+  "identity.create.requiredInformation.description": "Please enter this required data to join the Bitcredit network",
+  "identity.create.requiredInformation.title": "Personal identity",
+  "identity.create.restore": "Restore identity",
+  "identity.create.skip": "Skip",
+  "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
+  "identity.create.title": "Encrypted data",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
