chore: refactor optional information step

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -204,6 +204,12 @@
   "endorsements.title": "Endorsements ({count})",
   "identity.create.continue": "Continue",
   "identity.create.createNew": "Create new identity",
+  "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
+  "identity.create.optionalInformation.form.birthDate": "Birth date",
+  "identity.create.optionalInformation.form.cityOfBirth": "City of birth",
+  "identity.create.optionalInformation.form.countryOfBirth": "Country of birth",
+  "identity.create.optionalInformation.form.identificationNumber": "Identification number",
+  "identity.create.optionalInformation.title": "Optional: other information",
   "identity.create.postalAddress.description": "These fields are only needed if you want to issue bills in your own name",
   "identity.create.postalAddress.form.city": "City",
   "identity.create.postalAddress.form.country": "Country",
