--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -136,6 +136,7 @@
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can always re-add a contact later": "You can always re-add a contact later",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "authorizedSigners.title": "Authorized Signers",
   "bill.actions.actionsList": "Endorse",
   "bill.actions.endorse": "Endorse",
   "bill.actions.mint": "Mint",
@@ -191,6 +192,10 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
+  "identity.companyIdentities.title": "Company identities",
+  "identity.createNewCompanyIdentity": "Create new company",
+  "identity.logout": "Log out account",
+  "identity.title": "Identity",
   "endorse.cancel": "Cancel",
   "endorse.confirm": "Confirm",
   "endorse.endorsee": "Endorsee",
@@ -217,6 +222,10 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
+  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
+  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
+  "viewIdentity.titleForCompanyIdentity": "Company information",
+  "viewIdentity.titleForPersonalIdentity": "Personal identity"
   "pay.title": "Payment instructions",
   "payment.info.address": "Address to pay",
   "payment.info.from": "Payment from",
