chore: switch identity changes

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -205,8 +205,10 @@
   "endorsements.title": "Endorsements ({count})",
   "identity.companyIdentities.title": "Company identities",
   "identity.createNewCompanyIdentity": "Create new company",
-  "identity.logout": "Log out account",
-  "identity.title": "Identity",
+  "identity.logout": "Remove identity from device",
+  "identity.personalIdentity.title": "Personal identity",
+  "identity.title": "Switch identity",
+  "identity.view": "View",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
